fixed visibility and tooltips

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   font-size: 20px;
   margin: 0;
   padding: 0;
-  background-color: #eae3d3;
+  background-color: #efeeed;
 }
 
 .map-div {
@@ -13,6 +13,10 @@ body {
   border-radius: 10px;
   width: 95vw;
   padding: 5px;
+}
+
+.jumbotron {
+  background-color: #c7ccd6;
 }
 
 .jumbotron h1 {
@@ -40,6 +44,16 @@ svg {
   fill: #eae3d3;
   stroke: #000;
   stroke-width: 0.5px;
+}
+
+.tooltip {
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.2);
+  background-color: #847043;
+  position: absolute;
+  color: #fff;
+  padding: 5px;
+  text-align: left;
 }
 
 footer p {
